# DS_FPL

./: .env.example  .gitignore  README.md  pyproject.toml
data/: Interns.csv  quake_clear.csv
notebooks/: IDA_2025_Seminar_2_Missing_values,_Outliers,_Categorical_Encoding_CLASSWORK_and_HW1_tasks_ipynb__.ipynb
notebooks/week_03/: IDA_2024_5_DT_and_multiclass_FINISHED (1).ipynb  IDA_2024_6_Ensembles_Part_1.ipynb  IDA_2024_7_Ensembles_Part_2.ipynb
notebooks/week_1/: IDA_2025_Seminar_2+HW_Missing_values,_Outliers,_Categorical_Encoding_CLASSWORK_and_HW1_tasks_ipynb__.ipynb
notebooks/week_2/: IDA_2025_4_Regression_and_classification.ipynb  poetry_tutorial.md
src/: plot_cm.py
