[tool.poetry]
name = "ds-fpl"
version = "0.1.0"
description = "Just for fun"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.6.1"
numpy = "2.1"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
tqdm = "^4.67.1"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
